src/style2.css
* {
  margin: 0;
  padding: 0;
}
html {
  height: 100%;
}

body {
  min-height: 100vh;
  width: auto;
  background: linear-gradient(-45deg, #02a1fd, #78c0fe, #c9e5ff, #eaf5fe);
  background-size: 400% 400%;
  -webkit-animation: Gradient 15s ease infinite, fadeIn 1s ease 1;
  -moz-animation: Gradient 15s ease infinite, fadeIn 1s ease 1;
  animation: Gradient 15s ease infinite, fadeIn 1s ease 1;
}

h1,
h2,
h3,
h4,
h5 {
  color: #2d2d2d;
}
h1 {
  font-size: 2.75rem;
  font-weight: 400;
  font-family: 'Bebas Neue', sans-serif;
}

h2,
h3 {
  font-family: 'Roboto', sans-serif;
}

h2 {
  font-size: 1.15rem;
  font-weight: 400;
}

h3 {
  font-size: 1.5rem;
  font-weight: 300;
}

p {
  color: #484848;
  font-weight: 300;
}

a {
  text-decoration: none;
  color: #2d2d2d;
}

a:hover {
  color: rgb(236, 0, 249);
}

@-webkit-keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@-moz-keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.nav {
  font-weight: 400;
  font-size: 1.5em;
  font-family: 'Roboto';
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: 100%;
  align-items: center;
  width: 100%;
}

.navEl {
  padding-top: 0.25em;
}
#me {
  margin-left: 0.25em;
}
#git {
  margin-left: 1em;
}

#home {
  margin: 0 0 0 1em;
}

#bigLogo > img {
  width: 8em;
  height: auto;
}

#littleLogo {
  margin: 1em 0 0 0;
}

#littleLogo > img {
  width: 4em;
}

#mobileLogo > img {
  width: 4em;
}

#mobileLogo {
  margin: 0 0 0 2em;
}

.projects {
  text-align: center;
}

.projectTitle {
  font-size: 2.5em;
  margin: 0 0 0.25em 0;
}

.portfolioLink {
  width: 100%;
  height: auto;
}

.photo1 {
  width: 85%;
  height: auto;
  background-color: black;
  margin: 0;
  border-radius: 10px;
  filter: drop-shadow(0 0 0.25rem black);
}

.projectBody {
  margin: 0 2.25em 2em 2.25em;
}

.title {
  font-size: 3rem;
  margin: 0 0 0 0;
}

.staticPic {
  width: 100%;
  height: auto;
}

.portfolioPic {
  width: 100%;
  height: auto;
}

.projectBody > h3 > p {
  margin: 0.75em 0 0.75em 0;
}

.foot {
  min-width: 100%;
  height: 1.5em;
  display: flex;
  justify-content: space-between;
  background-color: #484848;
  margin: 0 0 0 0;
}

.foot > a {
  color: rgb(232, 232, 232);
  margin-right: 1em;
  margin-left: 1em;
}
.drinkGoRound {
  width: 100%;
  height: auto;
}
.drinkPic {
  width: 100%;
  height: auto;
}

@media screen and (min-width: 360px) and (max-width: 639px) {
  #me {
    margin-left: 1em;
  }

  #mobileLogo {
    margin-left: 4em;
  }
}

@media screen and (min-width: 640px) and (max-width: 940px) {
  .nav {
    margin-bottom: 0.5em;
    font-size: 2em;
    height: 4em;
  }
  #me {
    margin-left: 1em;
  }
  #bigLogo {
    margin-right: 6em;
  }
  .projects {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 50% 50%;
  }
  .projectBody {
    margin: 0 5em 0 5em;
  }
  .player {
    width: auto;
    height: auto;
  }
}

@media screen and (min-width: 941px) and (max-width: 1024px) {
  .nav {
    margin-bottom: 1em;
    font-size: 2.25em;
    height: 4em;
  }
  #me {
    margin-left: 1em;
  }
  #bigLogo {
    margin-right: 6em;
  }
  .projects {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 50% 50%;
  }
  .projectBody {
    margin: 0 8em 0 8em;
  }
  #title {
    font-size: 5em;
  }
  .projectBody > h1 {
    font-size: 3em;
  }
  .projectBody > h3 > p {
    font-size: 1.25em;
  }
  .player {
    width: auto;
    height: auto;
  }
}

@media screen and (min-width: 1025px) and (max-width: 1420px) {
  .nav {
    font-size: 2.15em;
    height: 4em;
  }
  #me {
    margin-left: 2em;
  }
  #bigLogo {
    margin-right: 7em;
  }
  .projects {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 50% 50%;
    margin: 0 10em 0 10em;
  }
  .projectTitle {
    font-size: 3em;
  }
  .projectBody {
    margin: 0 11em 1em 11em;
  }
  #title {
    font-size: 6em;
  }
  .projectBody > h1 {
    font-size: 4em;
  }
  .projectBody > h3 > p {
    font-size: 1.25em;
  }
  .projectBody > h3 > ol > li {
    font-size: 1em;
  }
  .foot {
    height: 2em;
  }
  .foot > a {
    font-size: 1.5em;
    margin-left: 2.5em;
    margin-right: 2.5em;
  }
}

@media screen and (min-width: 1421px) and (max-width: 2000px) {
  .nav {
    font-size: 2.5em;
    height: 4em;
  }
  #me {
    margin-left: 2em;
  }
  #bigLogo {
    margin-right: 8em;
  }
  #littleLogo {
    margin-left: 2em;
  }
  .projects {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 50% 50%;
    margin: 0 15em 0 15em;
  }
  .projectTitle {
    font-size: 4em;
  }
  #title {
    font-size: 6em;
  }
  .projectBody {
    margin: 0 18em 1.5em 18em;
  }
  .projectBody > h1 {
    font-size: 4.5em;
  }
  .projectBody > h3 > p {
    font-size: 1.3em;
  }
  .projectBody > h3 > ol > li {
    font-size: 1.2em;
  }
  .foot {
    height: 2em;
  }
  .foot > a {
    font-size: 1.5em;
    margin-left: 2.5em;
    margin-right: 2.5em;
  }
  .picContainer {
    display: flex;
    justify-content: center;
  }
  .portfolioPic {
    width: 100%;
  }
  .drinkContainer {
    display: flex;
    justify-content: center;
  }
  .drinkGoRound {
    width: 75%;
    height: auto;
  }
  .drinkPic {
    width: 100%;
    height: auto;
  }
  .staticPic {
    width: 80%;
    height: auto;
  }
}

@media screen and (min-width: 2001px) {
  .nav {
    font-size: 6em;
    height: 4em;
  }
  #me {
    margin-left: 5em;
  }
  #git {
    margin-left: 4em;
  }
  #bigLogo {
    margin-right: 12em;
  }
  #littleLogo {
    margin-left: 2em;
  }
  .projects {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 50% 50%;
    margin: 0 60em 0 60em;
  }
  .projectTitle {
    font-size: 6em;
  }
  #title {
    font-size: 12em;
  }
  .projectBody {
    margin: 0 50em 0 50em;
  }
  .projectBody > h1 {
    font-size: 10em;
  }
  .projectBody > h3 > p {
    font-size: 4em;
  }
  .projectBody > h3 > ol > li {
    font-size: 3.75em;
  }
  .picContainer {
    display: flex;
    justify-content: center;
  }
  .portfolioPic {
    width: 100%;
  }
  .drinkContainer {
    display: flex;
    justify-content: center;
  }
  .drinkGoRound {
    width: 75%;
    height: auto;
  }
  .drinkPic {
    width: 100%;
    height: auto;
  }
  .staticPic {
    width: 80%;
    height: auto;
  }
  .foot {
    height: 6em;
  }
  .foot > a {
    font-size: 4em;
    margin-left: 2.5em;
    margin-right: 2.5em;
  }
}

